about me alignement fixed

--- a/src/components/homepage.css
+++ b/src/components/homepage.css
@@ -74,3 +74,7 @@
   background-color: #eeeeee;
   opacity: 0.75;
 }
+
+card-align{
+  padding-left: 300vh;
+}
